--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,15 +18,10 @@ jobs:
         with:
           terraform_version: 1.0.0
 
-      - name: Configure Azure CLI with Service Principal
-        run: |
-          az login --service-principal \
-            --username ${{ secrets.AZURE_CLIENT_ID }} \
-            --password ${{ secrets.AZURE_CLIENT_SECRET }} \
-            --tenant ${{ secrets.AZURE_TENANT_ID }}
-
-      - name: Set Azure Subscription
-        run: az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: Configure Azure CLI
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_SUBSCRIPTION_CREDENTIALS }}
 
       - name: Terraform Init
         run: terraform init
