--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -20,8 +20,10 @@ jobs:
 
       - name: Configure Azure CLI
         uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_SUBSCRIPTION_CREDENTIALS }}
+        with:;
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
         run: terraform init
