--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,8 +26,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name:
-        run: echo "${SSH_PUBLIC_KEY}" > ~/.ssh/id_rsa.pub
+      - name: Create SSH Key File
+        run: |
+          mkdir -p ~/.ssh
+          echo "${SSH_PUBLIC_KEY}" > ~/.ssh/id_rsa.pub
+          chmod 600 ~/.ssh/id_rsa.pub
 
       - name: Terraform Init
         run: terraform init
