--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,5 +44,5 @@ jobs:
             git config --global user.name "Github Actions"
             git add .
             git commit -m "Auto commit by Github Actions"
-            git push
+            git push https://$GH_TOKEN@github.com/kee-en/azurefreetierdevenv.git HEAD:main
           fi
