--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Terraform Apply
         run: |
-          terraform plan -auto-approve
+          terraform plan
 
           if [ $? -eq 0 ]; then
             git config --global user.email "actions@github.com"
