--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,6 +42,9 @@ jobs:
           if [ $? -eq 0 ]; then
             git config --global user.email "actions@github.com"
             git config --global user.name "Github Actions"
+            git remote -v
+            git branch -a
+            git status
             git add .
             git commit -m "Auto commit by Github Actions"
             git push https://$GH_TOKEN@github.com/kee-en/azurefreetierdevenv.git HEAD:main
