--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,6 +32,13 @@ jobs:
           echo "${SSH_PUBLIC_KEY}" > ~/.ssh/id_rsa.pub
           chmod 600 ~/.ssh/id_rsa.pub
 
+      - name: Configure Git
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "Github Actions"
+          echo "machine github.com login $GH_TOKEN" > ~/.netrc
+          chmod 600 ~/.netrc
+
       - name: Terraform Init
         run: terraform init
 
@@ -40,12 +47,7 @@ jobs:
           terraform plan
 
           if [ $? -eq 0 ]; then
-            git config --global user.email "actions@github.com"
-            git config --global user.name "Github Actions"
-            git remote -v
-            git branch -a
-            git status
             git add .
-            git commit -m "Auto commit by Github Actions"
-            git push https://$GH_TOKEN@github.com/kee-en/azurefreetierdevenv.git HEAD:main
+            git commit -a -m "Auto commit by Github Actions"
+            git push origin HEAD:main
           fi
