--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,12 +1,18 @@
-name: Terraform Deployment
+name: Terraform Apply
 
 on:
   push:
     branches:
       - main
 
+on:
+  workflow_run:
+    workflow: ["Terraform Plan"]
+    types:
+      - completed
+
 jobs:
-  terraform:
+  terraform-apply:
     runs-on: ubuntu-latest
 
     env:
