--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,18 +1,14 @@
 name: Terraform Apply
 
 on:
-  push:
-    branches:
-      - main
-
-on:
   workflow_run:
-    workflow: ["Terraform Plan"]
+    workflows: ["Terraform Plan"]
     types:
       - completed
 
 jobs:
   terraform-apply:
+    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
 
     env:
